# Russian-Intonation-Trainer_Android

./: README.md  settings.gradle.kts
RussianIntonationServ/: build.gradle.kts  settings.gradle.kts
RussianIntonationServ/app/: build.gradle.kts
RussianIntonationServ/app/src/androidTest/java/com/mikleaka/russianintonationserver/: ExampleInstrumentedTest.kt
RussianIntonationServ/app/src/main/com/mikleaka/: Application.kt
RussianIntonationServ/app/src/main/com/mikleaka/data/database/: DatabaseFactory.kt  Users.kt
RussianIntonationServ/app/src/main/com/mikleaka/data/models/: AuthModels.kt  User.kt
RussianIntonationServ/app/src/main/com/mikleaka/data/repository/: UserRepository.kt
RussianIntonationServ/app/src/main/com/mikleaka/routes/: AuthRoutes.kt
RussianIntonationServ/app/src/main/com/mikleaka/security/: JwtConfig.kt  SecurityConfig.kt
RussianIntonationServ/app/src/main/com/mikleaka/utils/: EmailService.kt
RussianIntonationServ/app/src/main/res/values/: strings.xml  themes.xml
RussianIntonationServ/app/src/test/java/com/mikleaka/russianintonationserver/: ExampleUnitTest.kt
RussianIntonationServ/gradle/wrapper/: gradle-wrapper.properties
VKR/: ctc.py
VKR/dataset/IK1/Its_my_house/: Its_my_house.txt  alignment_results.json
VKR/dataset/IK1/Winter_is_coming_soon/: Winter_is_coming_soon.txt
app/: build.gradle.kts
app/src/androidTest/java/com/mikleaka/russianintonation/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mikleaka/russianintonation/: MainActivity.kt  RussianIntonationApp.kt
app/src/main/java/com/mikleaka/russianintonation/data/api/: ApiClient.kt  ApiService.kt
app/src/main/java/com/mikleaka/russianintonation/data/models/: AuthModels.kt  IntonationConstruction.kt  PracticeResult.kt  User.kt
app/src/main/java/com/mikleaka/russianintonation/data/repository/: AudioRepository.kt  IntonationConstructionsRepository.kt  UserRepository.kt
app/src/main/java/com/mikleaka/russianintonation/data/storage/: UserPreferences.kt
app/src/main/java/com/mikleaka/russianintonation/ui/auth/: AuthScreen.kt  AuthViewModel.kt  VerificationScreen.kt  VerificationViewModel.kt
app/src/main/java/com/mikleaka/russianintonation/ui/components/: CommonComponents.kt
app/src/main/java/com/mikleaka/russianintonation/ui/home/: HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/mikleaka/russianintonation/ui/intonation/: IntonationDetailsScreen.kt  IntonationDetailsViewModel.kt
app/src/main/java/com/mikleaka/russianintonation/ui/practice/: PracticeScreen.kt  PracticeViewModel.kt
app/src/main/java/com/mikleaka/russianintonation/ui/results/: ResultsScreen.kt  ResultsViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mikleaka/russianintonation/: ExampleUnitTest.kt
dsp-core-android-develop/: .gitignore  .gitlab-ci.yml  .gitmodules  README.md
dsp-core-android-develop/android/: .gitignore  consumer-rules.pro
dsp-core-android-develop/android/src/main/: AndroidManifest.xml
dsp-core-android-develop/android/src/main/cpp/: AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  cmake_wrapper  conan-profile-arch.in  conan-profile-host  conan.cmake  dspcore-jni.cpp
dsp-core-android-develop/android/src/main/java/org/studyintonation/dspcore/: Pitch.java  PitchDetector.java
dsp-core-android-develop/android/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
